Customize the code

--- a/index.html
+++ b/index.html
@@ -5,28 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      .background-image{
+        background-image: url('./bg.jpg');
+      }
+      .place::placeholder{
+        color: gray;
+        font-weight: 600;
+      }
+    </style>
   </head>
-  <body>
-    <header class="text-center text-5xl text-purple-600 font-bold my-10">
-      Calculate Your BMI!
+  <body class="background-image">
+    <header class="text-center text-3xl md:text-4xl lg:text-5xl text-purple-700 font-bold my-10 w-[350px] md:w-[400px] lg:w-[500px] mx-auto bg-white/70 p-5 rounded-full">
+      <div>
+        <h1>Calculate Your BMI!</h1>
+      </div>
     </header>
     <main class="max-w-screen-lg mx-auto">
-      <section class="w-3/4 md:h-4/6 lg:w-1/2 mx-auto p-5 border-purple-700 border-4 rounded-lg">
-        <div class="flex justify-between items-center gap-5">
-          <p class="text-xl font-semibold">Your height (in centimeters) :</p>
-          <input id="height-field"
-            class="bg-gray-200 rounded-lg p-2 outline-none w-20"
-            type="text"
-            placeholder="cm"
-          />
+      <section class="flex justify-center gap-5 mb-5"><button id="btn-metric" onclick="handleClickMetric()" class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg">Metric</button><button id="btn-imperial" onclick="handleClickImperial()" class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg">Imperial</button></section>
+      <section class="w-3/4 md:w-4/6 lg:w-1/2 mx-auto p-5 border-4 rounded-lg bg-white/70 shadow-lg">
+        <!-- Metric -->
+        <div id="metric">
+          <div class="flex justify-between items-center gap-5">
+            <p class="text-xl font-semibold">Your height (in centimeters) :</p>
+            <input id="height-field"
+              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
+              type="text"
+              placeholder="cm"
+            />
+          </div>
+          <div class="flex justify-between items-center my-5 gap-5">
+            <p class="text-xl font-semibold">Your weight (in kilograms) :</p>
+            <input id="weight-field"
+            class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
+              type="text"
+              placeholder="kg"
+            />
+          </div>
         </div>
-        <div class="flex justify-between items-center my-5 gap-5">
-          <p class="text-xl font-semibold">Your Weight (in kilograms) :</p>
-          <input id="weight-field"
-            class="bg-gray-200 rounded-lg p-2 outline-none w-20"
-            type="text"
-            placeholder="kg"
-          />
+        <!-- Imperial -->
+        <div id="imperial" class="hidden">
+          <div class="flex justify-between items-center gap-5">
+            <p class="text-xl font-semibold">Your height (in feet & inches) :</p>
+            <div>
+              <input id="feet-field"
+              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
+              type="text"
+              placeholder="ft"
+            />
+              <input id="inch-field"
+              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
+              type="text"
+              placeholder="inch"
+            />
+            </div>
+          </div>
+          <div class="flex justify-between items-center my-5 gap-5">
+            <p class="text-xl font-semibold">Your weight (in pounds) :</p>
+            <input id="pound-field"
+            class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
+              type="text"
+              placeholder="lb"
+            />
+          </div>
         </div>
         <div class="flex justify-center">
           <button onclick="handleClick()" class="text-xl text-white hover:text-black font-semibold bg-purple-700 hover:bg-purple-500 px-4 py-2 rounded-lg">
