--- a/index.html
+++ b/index.html
@@ -6,71 +6,105 @@
     <title>BMI Calculator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      .background-image{
-        background-image: url('./bg.jpg');
-      }
-      .place::placeholder{
-        color: gray;
-        font-weight: 600;
+      .background-image {
+        background-image: url("./bg.jpg");
       }
     </style>
   </head>
   <body class="background-image">
-    <header class="text-center text-3xl md:text-4xl lg:text-5xl text-purple-700 font-bold my-10 w-[350px] md:w-[400px] lg:w-[500px] mx-auto bg-white/70 p-5 rounded-full">
+    <header
+      class="text-center text-3xl md:text-4xl lg:text-5xl text-purple-700 font-bold my-10 w-[350px] md:w-[400px] lg:w-[500px] mx-auto bg-white/70 p-5 rounded-full"
+    >
       <div>
         <h1>Calculate Your BMI!</h1>
       </div>
     </header>
     <main class="max-w-screen-lg mx-auto">
-      <section class="flex justify-center gap-5 mb-5"><button id="btn-metric" onclick="handleClickMetric()" class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg">Metric</button><button id="btn-imperial" onclick="handleClickImperial()" class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg">Imperial</button></section>
-      <section class="w-3/4 md:w-4/6 lg:w-1/2 mx-auto p-5 border-4 rounded-lg bg-white/70 shadow-lg">
+      <section class="flex justify-center gap-5 mb-5">
+        <button
+          id="btn-metric"
+          onclick="handleClickMetric()"
+          class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg"
+        >
+          Metric</button
+        ><button
+          id="btn-imperial"
+          onclick="handleClickImperial()"
+          class="text-xl hover:text-white font-semibold bg-gray-300 hover:bg-purple-500 px-4 py-2 rounded-lg"
+        >
+          Imperial
+        </button>
+      </section>
+      <section
+        class="w-3/4 md:w-4/6 lg:w-1/2 mx-auto p-5 border-4 rounded-lg bg-white/70 shadow-lg"
+      >
         <!-- Metric -->
         <div id="metric">
           <div class="flex justify-between items-center gap-5">
             <p class="text-xl font-semibold">Your height (in centimeters) :</p>
-            <input id="height-field"
-              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
-              type="text"
-              placeholder="cm"
-            />
+            <div>
+              <input
+                id="height-field"
+                class="rounded-lg px-2 py-1 w-16 border-2 border-purple-300 place text-lg"
+                type="text"
+              />
+              <label for="height-field" class="text-lg font-semibold">cm</label>
+            </div>
           </div>
           <div class="flex justify-between items-center my-5 gap-5">
             <p class="text-xl font-semibold">Your weight (in kilograms) :</p>
-            <input id="weight-field"
-            class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
-              type="text"
-              placeholder="kg"
-            />
+            <div>
+              <input
+                id="weight-field"
+                class="rounded-lg px-2 py-1 w-16 border-2 border-purple-300 place text-lg"
+                type="text"
+              />
+              <label for="weight-field" class="text-lg font-semibold ml-1">kg</label>
+            </div>
           </div>
         </div>
         <!-- Imperial -->
         <div id="imperial" class="hidden">
           <div class="flex justify-between items-center gap-5">
-            <p class="text-xl font-semibold">Your height (in feet & inches) :</p>
+            <p class="text-xl font-semibold">
+              Your height (in feet & inches) :
+            </p>
             <div>
-              <input id="feet-field"
-              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
-              type="text"
-              placeholder="ft"
-            />
-              <input id="inch-field"
-              class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
-              type="text"
-              placeholder="inch"
-            />
+              <input
+                id="feet-field"
+                class="rounded-lg px-2 py-1 w-16 border-2 border-purple-300 place text-lg"
+                type="text"
+              /><label for="feet-field" class="text-lg font-semibold ml-1"
+                >ft</label
+              >
+              <input
+                id="inch-field"
+                class="rounded-lg px-2 py-1 w-16 border-2 border-purple-300 place text-lg"
+                type="text"
+              /><label for="inch-field" class="text-lg font-semibold ml-1"
+                >in</label
+              >
             </div>
           </div>
           <div class="flex justify-between items-center my-5 gap-5">
             <p class="text-xl font-semibold">Your weight (in pounds) :</p>
-            <input id="pound-field"
-            class="rounded-lg px-2 py-1  w-20 border-2 border-purple-300 place text-lg"
-              type="text"
-              placeholder="lb"
-            />
+            <div>
+              <input
+                id="pound-field"
+                class="rounded-lg px-2 py-1 w-16 border-2 border-purple-300 place text-lg"
+                type="text"
+              />
+              <label for="pound-field" class="text-lg font-semibold"
+                >lb</label
+              >
+            </div>
           </div>
         </div>
         <div class="flex justify-center">
-          <button onclick="handleClick()" class="text-xl text-white hover:text-black font-semibold bg-purple-700 hover:bg-purple-500 px-4 py-2 rounded-lg">
+          <button
+            onclick="handleClick()"
+            class="text-xl text-white hover:text-black font-semibold bg-purple-700 hover:bg-purple-500 px-4 py-2 rounded-lg"
+          >
             Calculate
           </button>
         </div>
